# KnightOnline

./: .gitmodules  All.slnx  CMakeLists.txt  Client.slnx  Doxyfile  Server.slnx  Tests.slnx  ThirdParty.slnx  Tools.slnx
.github/workflows/: build_cmake_all.yml  build_msbuild_all.yml  build_msbuild_client.yml  build_msbuild_client_tools.yml  build_msbuild_server.yml  build_msbuild_tools.yml  clang-format-check.yml  clang-tidy-check.yml
props/: FileIO.props
src/Client/JpegFile/: JpegFile.cpp  JpegFile.h
src/Client/WarFare/: CMakeLists.txt  GameDef.h  GameProcMain.cpp  GameProcMain.h  IconItemSkill.cpp  IconItemSkill.h  N3UIWndBase.h  UIImageTooltipDlg.cpp  UIItemUpgrade.cpp  UIItemUpgrade.h  UIUpgradeSelect.cpp  WarFare.Core.vcxproj  WarFare.Core.vcxproj.filters  text_resources.h
src/FileIO/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/N3Base/: BitMapFile.h  N3UIImage.cpp  N3UIImage.h
src/Server/Ebenezer/: AISocket.cpp  Define.h  EXEC.cpp  EbenezerApp.cpp  EbenezerSocketManager.cpp  LOGIC_ELSE.cpp  User.cpp  User.h
src/Server/shared-server/: TcpClientSocketManager.cpp  TcpClientSocketManager.h  TcpServerSocketManager.cpp  TcpSocket.cpp  TcpSocket.h  TcpSocketManager.cpp  TcpSocketManager.h
src/shared/: CircularBuffer.h  globals.h  packets.h
tests/FileIO/: FileReaderSetup_test.cpp  FileReader_test.cpp
tests/Server/Ebenezer/: ItemUpgrade_test.cpp
